# django-rdkit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
django_rdkit/: operations.py
django_rdkit/models/: fields.py  functions.py
docs/: project.rst  tutorial.rst
tests/: tests.py
